z-index fix

--- a/app/assets/stylesheets/root.css
+++ b/app/assets/stylesheets/root.css
@@ -143,6 +143,7 @@
 .confirmation.confirmation-active{
 	display: block;
 	animation: fadeOut 5s linear forwards;
+	z-index: 2;
 }
 
 @keyframes fadeOut {
